# netsdb

./: .gitignore  CMakeLists.txt  Lachesis.md  README.md  SConstruct  SConstruct.general  cache_test.sh  clear-tests.sh  documentation.md  gen_trace.sql  nn_model_ep_768.ckpt.data-00000-of-00001  nn_model_ep_768.ckpt.index  nn_model_ep_864.ckpt.data-00000-of-00001  nn_model_ep_864.ckpt.index  nn_model_ep_960.ckpt.data-00000-of-00001  nn_model_ep_960.ckpt.index  rf_mm_dbrf_mm_set  test.sh
conf/: aaa10.pem  serverlist  serverlist1
model-inference/: README.md
model-inference/decisionTree/experiments/higgs/TF-DF/: BUILD.bazel  TF-DF_Test.py  TF-DF_Test_XGBoost.py  compile_and_run.sh  higgs.cc  xgboost_model_converter.py
nn_model-1-3-4/: nn_model_ep_864.ckpt.data-00000-of-00001  nn_model_ep_864.ckpt.index
nn_model_1-2-3/: nn_model_ep_960.ckpt.data-00000-of-00001  nn_model_ep_960.ckpt.index
scripts/: .integratedTests.py.swp  checkProcess.sh  cleanup.sh  cleanupNode.sh  cleanupSoFiles.sh  cleanupSoFiles1.sh  cmdWorkers.sh  collect_proc.sh  debugTests.py  distributedTest.py  ganglia-extract.py  install.sh  integratedTests.py  launchWorkers.sh  lsWorkers.sh  multiClientProc.sh  rebootWorkers.sh  roll_server_logs.sh  run-bench.sh  run-tests.sh  runPipelineBench.sh  runPipelineBenchVirtual.sh  s3Master.sh  s3Worker.sh  splitFile.sh  sshWorkers.sh  standaloneTest.py  startMaster.sh  startPseudoCluster.py  startWorker.sh  startWorkers.sh  stopWorker.sh  stopWorkers.sh  swapWorkers.sh  syncWithPliny.sh  test.sh  testgmm.py  train.sh  upgrade-remove-catalog.sh  upgrade.sh
(+8468 files in other folders)
