package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_binary(
#    name = "beginner_cc",
#    srcs = ["beginner.cc"],
    name = "higgs_cc",
    srcs = ["higgs.cc"],
    deps = [
        "@com_google_absl//absl/flags:flag",
        "@ydf//yggdrasil_decision_forests/dataset:all_dataset_formats",
        "@ydf//yggdrasil_decision_forests/dataset:data_spec",
        "@ydf//yggdrasil_decision_forests/dataset:data_spec_cc_proto",
        "@ydf//yggdrasil_decision_forests/dataset:data_spec_inference",
	"@ydf//yggdrasil_decision_forests/dataset:vertical_dataset",
        "@ydf//yggdrasil_decision_forests/dataset:vertical_dataset_io",
	"@ydf//yggdrasil_decision_forests/model:abstract_model",
        "@ydf//yggdrasil_decision_forests/model:all_models",
        "@ydf//yggdrasil_decision_forests/model:model_library",
        "@ydf//yggdrasil_decision_forests/model:prediction_cc_proto",
        "@ydf//yggdrasil_decision_forests/serving/decision_forest:register_engines",
        "@ydf//yggdrasil_decision_forests/utils:evaluation",
        "@ydf//yggdrasil_decision_forests/metric",
        "@ydf//yggdrasil_decision_forests/metric:report",
        "@ydf//yggdrasil_decision_forests/utils:filesystem",
        "@ydf//yggdrasil_decision_forests/utils:logging",
    ],
)
